# async_crawl

./: Cargo.toml  notes.md
src/: async_recursive_crawler.rs  async_scaled_crawler.rs  crawler.rs  dir_work.rs  example.rs  lib.rs  main.rs  scaled_crawler.rs  scaled_crawler_async.rs  scaled_crawler_threaded.rs  singlethread_crawler.rs  threaded_scaled_crawler.rs
